--- a/src/app/components/screens/about-us/about-us.component.html
+++ b/src/app/components/screens/about-us/about-us.component.html
@@ -10,7 +10,7 @@
             <div class="text-center">
               <img
                 class="avatar rounded-circle w-25"
-                src="https://scontent.fhan5-6.fna.fbcdn.net/v/t1.6435-9/144003394_481392229687996_6882795505903106698_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZmDo-bjrsH0AX-DlxG_&_nc_ht=scontent.fhan5-6.fna&oh=00_AT_rZg-1i6HLIMyrjRwVfs4jxSZEpGdHFyQs5YHXLfw8Pw&oe=6277D5FA"
+                src="../../../../assets/yennt.jpg"
                 alt=""
               />
             </div>
