--- a/src/app/components/screens/home/global-feed/global-feed.component.html
+++ b/src/app/components/screens/home/global-feed/global-feed.component.html
@@ -5,7 +5,7 @@
         <i class="bi bi-search"></i>
         <input
           type="text"
-          placeholder="Search in inlife ..."
+          placeholder="Search by title article ..."
           #search
           (keyup)="onKeyUp(search.value)"
         />
