fix spinner loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-particle></app-particle>
 <ngx-spinner
-  bdColor="#fff0"
+  bdColor="#dfdfdf80 "
   size="large"
   color="#5d99c6"
   type="ball-scale-multiple"
