--- a/src/app/components/commons/nav-bar/nav-bar.component.html
+++ b/src/app/components/commons/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-lg d-flex justify-content-between align-items-center py-0"
   >
     <a class="navbar-brand conduit" routerLink="/"
-      ><b class="text-white" (click)="openSpinner(300)">InLife</b></a
+      ><b class="text-white">InLife</b></a
     >
     <div class="nav navbar-nav d-flex align-items-center">
       <ul class="navbar-nav">
