--- a/src/app/components/commons/pagination/pagination.component.html
+++ b/src/app/components/commons/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="!isEmpty">
+<nav>
   <ul class="pagination d-flex justify-content-center">
     <li
       class="page-item bg-white shadow"
