--- a/src/app/components/screens/login/login.component.html
+++ b/src/app/components/screens/login/login.component.html
@@ -45,11 +45,19 @@
               * Password is required
             </small>
           </div>
-          <div class="text-center my-3">
+          <div class="text-center my-2">
             Don't an account yet?&nbsp;<a
               class="text-p-dark"
               routerLink="/signup"
               >Sign up one right here</a
+            >
+          </div>
+          <div class="text-center mb-3">
+            <a
+              style="cursor: pointer; text-decoration: underline"
+              class="text-p-dark"
+              (click)="demoAccount()"
+              >Demo Account</a
             >
           </div>
           <div class="d-flex justify-content-center">
