--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,20 @@
+.app-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .banner {
   background: url(../assets/banner.avif) no-repeat center;
   background-size: cover;
   background-position: right;
-  & h1{
+  flex-grow: 1;
+  & h1 {
     font-weight: 700;
     font-size: 40px;
     text-shadow: 2px 2px 4px #000000;
   }
-  & p{
+  & p {
     font-weight: 500;
     text-shadow: 2px 2px 4px #000000;
   }
