--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,15 +7,17 @@
 >
   <p style="font-size: 20px; color: #5d99c6">Loading...</p>
 </ngx-spinner>
-<div class="container-fluid bg-p-dark">
-  <app-nav-bar></app-nav-bar>
+<div class="app-container">
+  <div class="container-fluid bg-p-dark">
+    <app-nav-bar></app-nav-bar>
+  </div>
+  <div
+    class="banner container-fluid bg-p-light text-center py-5 text-white"
+    *ngIf="authService.isAuthenticated() === false"
+  >
+    <h1>InLife</h1>
+    <p>Let's share the best things together!</p>
+  </div>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
-<div
-  class="banner container-fluid bg-p-light text-center py-5 text-white"
-  *ngIf="authService.isAuthenticated() === false"
->
-  <h1>InLife</h1>
-  <p>Let's share the best things together!</p>
-</div>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
