--- a/src/app/components/commons/footer/footer.component.html
+++ b/src/app/components/commons/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer class="bg-info py-2 fixed-bottom">
+<footer class="py-2">
   <div class="container text-center py-1">
-    <a class="text-dark mr-2" routerLink="/about">
-      © {{ currentYear }} YenNT. All Rights Reserved.
+    <a class="text-white mr-2" routerLink="/about">
+      © {{ currentYear }} Spice-Girls. All Rights Reserved.
     </a>
   </div>
 </footer>
