--- a/src/app/components/screens/about-us/about-us.component.html
+++ b/src/app/components/screens/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div class="container pb-5">
   <div class="row mb-4">
     <div class="col mt-4 mx-auto bg-white shadow pb-3">
-      <h1 class="text-center text-p-dark my-4">Yen Nguyen Thi</h1>
+      <h1 class="text-center text-p-dark my-4">Spice Girls</h1>
       <div class="row py-4">
         <div
           class="col bg-img d-flex justify-content-center align-items-center shadow-sm rounded"
@@ -10,15 +10,15 @@
             <div class="text-center">
               <img
                 class="avatar rounded-circle w-25"
-                src="../../../../assets/yennt.jpg"
-                alt=""
+                src="../../../../assets/class.jpg"
+                alt="class image"
               />
             </div>
             <div class="h2 mt-2 text-light text-center font-weight-bold">
-              YenNT
+              Spice Girls
             </div>
             <div class="text-light text-center lead">
-              <em>Developer Angular</em>
+              <em>Angular Developers</em>
             </div>
           </div>
         </div>
@@ -26,8 +26,14 @@
       <div class="row py-4">
         <div class="col text-center text-p-dark">
           <strong style="line-height: 5rem"
-            >©2022 YenNT. IT1 - K13 - HaUI.</strong
+            >©2022 Spice Girls. HN-FR-ANGULAR-01.</strong
           >
+          <p>Group members:</p>
+          <p>Cấn Thị Thùy: ThuyCT6</p>
+          <p>Phan Thị Hoài An: AnPTH</p>
+          <p>Nguyễn Thị Yến: YenNT44</p>
+          <p>Hoàng Thanh Nga: NgaHT10</p>
+          <p>Nguyễn Thị Phương: PhuongNT105</p>
         </div>
       </div>
     </div>
