fix footer and about

--- a/src/app/components/screens/about-us/about-us.component.html
+++ b/src/app/components/screens/about-us/about-us.component.html
@@ -28,7 +28,7 @@
           <strong style="line-height: 5rem"
             >©2022 Spice Girls. HN-FR-ANGULAR-01.</strong
           >
-          <p>Group members:</p>
+          <p class="group">Group members:</p>
           <p>Cấn Thị Thùy: ThuyCT6</p>
           <p>Phan Thị Hoài An: AnPTH</p>
           <p>Nguyễn Thị Yến: YenNT44</p>
