--- a/src/app/components/screens/about-us/about-us.component.scss
+++ b/src/app/components/screens/about-us/about-us.component.scss
@@ -1,3 +1,7 @@
-.avatar{
-    border: 3px solid white;
+.avatar {
+  border: 3px solid white;
+}
+.group {
+  font-size: 20px;
+  font-weight: 600;
 }
