--- a/src/app/components/commons/footer/footer.component.html
+++ b/src/app/components/commons/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-2">
+<footer class="py-2 fixed-bottom">
   <div class="container text-center py-1">
     <a class="text-white mr-2" routerLink="/about">
       © {{ currentYear }} Spice-Girls. All Rights Reserved.
